# teaching-agent

./: .dockerignore  .gitignore  generate_all_graphs.py  langgraph.json  pyproject.toml
docs/: api-usage-guide.md  后端接口.md  课程汇报PPT.md  课程汇报PPT_final.md
notebooks/: lesson_plan.ipynb
src/agent/: __init__.py  auth.py  batch_grading_agent.py  chapter_content_generator copy.py  chapter_content_generator.py  chapter_experiment_generator.py  chapter_outline_generator.py  code_agent.py  graph.py  lesson_plan_workflow.py  math_agent.py  mem.py  prompt.py  quiz_generator.py  quiz_generator_beta.py  rag_agent.py  supervisor.py  swarm.py  tools.py  webapp.py
src/agent/mcp/: graph_tools.py  rag_tools.py
static/: upload.html
tests/integration_tests/: test_graph.py
tests/unit_tests/: test_configuration.py
